# NASO

./: .cz.toml  .gitlab-ci.yml  CHANGELOG.md  README.md
Concept/: DNN.md  (+7 more)
code/NASO/: .cz.toml  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTE.md  INIT.sh  INSTALL.sh  ISSUES.md  README.md  get_power.py  manage.py  pyproject.toml  requirements.txt
code/NASO/api/: autokeras_urls.py  celery_urls.py  comparisons_urls.py  inference_urls.py  system_urls.py  tensorflow_urls.py  urls.py
code/NASO/api/helper_scripts/: run.py
code/NASO/api/serializers/: architecture.py  autokeras.py  model_optimization.py  session.py  tensorflow.py  training.py  types.py
code/NASO/api/views/: autokeras.py  celery.py  comparisons.py  inference.py  metrics.py  system.py  tensorflow.py
code/NASO/celery/: README.md  celery.service
code/NASO/comparisons/: urls.py
code/NASO/comparisons/forms/: create.py  edit.py
code/NASO/comparisons/migrations/: 0001_initial.py
code/NASO/comparisons/models/: comparison.py
code/NASO/comparisons/views/: details.py  list.py
code/NASO/dashboard/: tests.py  urls.py
code/NASO/dashboard/views/: Dashboard.py  dashboard.py
code/NASO/datasets/: urls.py
code/NASO/datasets/helper_scripts/: normalizations.py
code/NASO/datasets/views/: list.py
code/NASO/docs/: dashboard.rst  modules.rst  naso.rst  neural_architecture.management.commands.rst  neural_architecture.management.rst  neural_architecture.migrations.rst  neural_architecture.models.rst  neural_architecture.rst  plugins.migrations.rst  plugins.rst  runs.migrations.rst  runs.rst  runs.templatetags.rst  system.rst  system.templatetags.rst
code/NASO/docs/source/: conf.py  index.rst
code/NASO/helper_scripts/: Timer.py  database.py  extensions.py  get_token.html  git.py  importing.py  power_management.py  pruning.py  timer.py
code/NASO/inference/: admin.py  urls.py
code/NASO/inference/celery/: run_inference.py
code/NASO/inference/forms/: new.py  update.py
code/NASO/inference/helper_scripts/: tensorflow.py
code/NASO/naso/: asgi.py  celery.py  constants.py  context_processors.py  settings.py  settings_base.py  settings_local.py  settings_production.py  urls.py  wsgi.py
code/NASO/neural_architecture/: admin.py  autokeras.py  neural_net.py  validators.py
code/NASO/plugins/: README.md  admin.py  tests.py  urls.py
code/NASO/runs/: admin.py  autokeras_urls.py  template_urls.py  tests.py  urls.py
code/NASO/system/: urls.py
code/NASO/templates/: base.html  messages.html
code/NASO/workers/: urls.py
(+255 files in other folders)
