[tool.poetry]
name = "naso"
version = "1.0.0"
description = "Neural architecture search and optimizer. A framework to allow for easy and gui configurable neural architecture search as well as optimization runs"
authors = ["Marius Goehring <marius@mariusgoehring.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
tensorflow = {version = "2.15.1", extras = ["and-cuda"]}
Django = "^4.2.5"
networkx = "^3.1"
matplotlib = "^3.8.0"
django-simple-history = "^3.4.0"
django-crispy-forms = "^2.0"
black = "^23.9.1"
flake8 = "^6.1.0"
flake8-simplify = "^0.21.0"
flake8-django = "^1.4"
isort = "^5.12.0"
python-decouple = "^3.8"
dj-database-url = "^2.1.0"
crispy-bootstrap5 = "^0.7"
django-adminlte3 = "^0.1.6"
celery = "^5.3.4"
django-celery-results = "^2.5.1"
loguru = "^0.7.2"
autokeras = "^1.1.0"
tensorflow-datasets = "^4.9.3"
tensorflow-model-optimization = "^0.7.5"
pylint = "2.17.7"
pylint-django = "^2.5.5"
djlint = "^1.34.0"
djangorestframework = "^3.14.0"
django-rest-framework = "^0.1.0"
gitlint = "^0.19.1"
toml = "^0.10.2"
kaggle = "^1.5.16"
scikit-learn = "^1.3.2"
django-safedelete = "^1.3.3"
py-cpuinfo = "^9.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
commitizen = "^3.12.0"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
