[tool.poetry]
name = "naso"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
celery = "^5.4.0"
django = "4.2.5"
django-simple-history = "^3.7.0"
django-crispy-forms = "^2.3"
django-adminlte3 = "^0.1.6"
django-celery-results = "^2.5.1"
djangorestframework = "^3.15.2"
django-safedelete = "^1.4.0"
py-cpuinfo = "^9.0.0"
kaggle = "^1.6.17"
loguru = "^0.7.2"
python-decouple = "^3.8"
matplotlib = "^3.9.2"
tensorflow-datasets = "^4.9.6"
numpy = "1.26"
networkx = "^3.3"
tensorflow = "2.15.0+nv24.05"
keras-tuner = {git = "https://github.com/keras-team/keras-tuner.git"}
autokeras = "1.0.20"
tensorflow-model-optimization = "^0.8.0"
scikit-learn = "^1.5.1"
crispy-bootstrap5 = "^2024.2"
jetson-stats = "^4.2.9"
keras = "2.15.0"
ml-dtypes = "^0.4.0"
h5py = "^3.11.0"


[[tool.poetry.source]]
name = "tensorflow"
url = "https://developer.download.nvidia.com/compute/redist/jp/v60dp"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
